[package]
name = "migrations_internals"
version = "1.3.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Internal implementation of diesels migration mechanism"
homepage = "http://diesel.rs"

[dependencies]
diesel = { version = "~1.3.0", default-features = false }
barrel = { version = "<= 0.2.0", optional = true, features = ["diesel-filled"] }
libsqlite3-sys = { version = ">=0.8.0, <0.10.0", optional = true, features = ["min_sqlite_version_3_7_16"] }

[dev-dependencies]
tempdir = "0.3.4"

[features]
default = []
