[package]
name = "migrations_macros"
version = "1.3.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Codegeneration macros for diesels embedded migrations"
documentation = "http://docs.diesel.rs"
homepage = "http://diesel.rs"

[dependencies]
migrations_internals = "~1.3.0"
syn = { version = "0.11.4", features = ["aster"] }
quote = "0.3.12"
libsqlite3-sys = { version = ">=0.8.0, <0.10.0", optional = true, features = ["min_sqlite_version_3_7_16"] }

[dev-dependencies]
tempdir = "0.3.4"

[lib]
proc-macro = true

[features]
default = []
